--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 alinear-2">
                         <div class="columna">
                             <h4>Profesores</h4>
                             <a href="./404.html">Promociones</a>
