--- a/index.html
+++ b/index.html
@@ -260,6 +260,13 @@
                                 <p>Nuevas Zapatillas de Adidas Perfectas para alto rendimiento</p>
                             </div>
                             </a>
+                            <a href="#">
+                                <div class="item">
+                                <img style="height: 215px;" src="./img/expo_carreras_2019_1-37-300x200.jpg" alt="">
+                                <h3>Zapatillas Adidas New</h3>
+                                <p>Nuevas Zapatillas de Adidas Perfectas para alto rendimiento</p>
+                            </div>
+                            </a>
                         </div>
                         
                     </div>
