proyecto, falta footer

--- a/institucional.html
+++ b/institucional.html
@@ -53,72 +53,72 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            editar
+                            La UNLB
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Institucional</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="./institucional.html">Institucional</a></li>
+                            <li><a class="dropdown-item" href="#">Gobierno</a></li>
+                            <li><a class="dropdown-item" href="#">Autoridades</a></li>
                         </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Enseñanza
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Carreras de grado</a></li>
+                                <li><a class="dropdown-item" href="#">Carreras de posgrado</a></li>
+                                <li><a class="dropdown-item" href="#">Tecnicaturas</a></li>
                             </ul>
                             </li>
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
+                        Investigación
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Buscador de proyectos</a></li>
+                        <li><a class="dropdown-item" href="#">Convocatorias</a></li>
+                        <li><a class="dropdown-item" href="#">Insentivos</a></li>
                     </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            Extensión
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Programas</a></li>
+                            <li><a class="dropdown-item" href="#">Convenios</a></li>
+                            <li><a class="dropdown-item" href="#">Feria educativa</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            Becas
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Estudiantes</a></li>
+                            <li><a class="dropdown-item" href="#">Posgrado y movilidad</a></li>
+                            <li><a class="dropdown-item" href="#">Investigación y creación</a></li>
                         </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Comunicación
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Comunicación interna</a></li>
+                                <li><a class="dropdown-item" href="#">UNLB en los medios</a></li>
+                                <li><a class="dropdown-item" href="#">Prensa institucional</a></li>
                             </ul>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Dropdown
+                                    Administración
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#">Guía de trámites</a></li>
+                                    <li><a class="dropdown-item" href="#">Concursos no docentes</a></li>
+                                    <li><a class="dropdown-item" href="#">Recibos digitales</a></li>
                                 </ul>
                                 </li>
                 </div>
