--- a/index.html
+++ b/index.html
@@ -53,72 +53,72 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            editar
+                            La UNLB
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./institucional.html">Institucional</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Gobierno</a></li>
+                            <li><a class="dropdown-item" href="#">Autoridades</a></li>
                         </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Enseñanza
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Carreras de grado</a></li>
+                                <li><a class="dropdown-item" href="#">Carreras de posgrado</a></li>
+                                <li><a class="dropdown-item" href="#">Tecnicaturas</a></li>
                             </ul>
                             </li>
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
+                        Investigación
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Buscador de proyectos</a></li>
+                        <li><a class="dropdown-item" href="#">Convocatorias</a></li>
+                        <li><a class="dropdown-item" href="#">Insentivos</a></li>
                     </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            Extensión
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Programas</a></li>
+                            <li><a class="dropdown-item" href="#">Convenios</a></li>
+                            <li><a class="dropdown-item" href="#">Feria educativa</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            Becas
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Estudiantes</a></li>
+                            <li><a class="dropdown-item" href="#">Posgrado y movilidad</a></li>
+                            <li><a class="dropdown-item" href="#">Investigación y creación</a></li>
                         </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Comunicación
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Comunicación interna</a></li>
+                                <li><a class="dropdown-item" href="#">UNLB en los medios</a></li>
+                                <li><a class="dropdown-item" href="#">Prensa institucional</a></li>
                             </ul>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Dropdown
+                                    Administración
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#">Guía de trámites</a></li>
+                                    <li><a class="dropdown-item" href="#">Concursos no docentes</a></li>
+                                    <li><a class="dropdown-item" href="#">Recibos digitales</a></li>
                                 </ul>
                                 </li>
                 </div>
@@ -173,8 +173,8 @@
                                 <div class="card" style="width: 18rem; height: 25rem;">
                             <img src="./img/Laguna_Setubal_Bajante_Parana_Alfieri_35_vga.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">27/06/23</h5>
-                                <p class="card-text">La junta electopral dio a conocer los padrones proviciorios</p>
+                                <h6 class="card-title">UNLB Noticias | 21-06-2023</h6>
+                                <p class="card-text">El próximo congreso de bioingeniería se realizará en la ciudad de Santa Fe.</p>
                             </div>
                         </div>
                             </a>
@@ -184,8 +184,8 @@
                             <div class="card" style="width: 18rem;height: 25rem">
                             <img src="./img/01_Asamblea_UNL_2022_vga.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h6 class="card-title">UNLB Noticias | 26-06-2023</h6>
+                                <p class="card-text">La Asamblea Universitaria de UNLB aprobó la Memoria y el Informe 2021</p>
                             </div>
                         </div>
                         </a>
@@ -196,8 +196,8 @@
                             <div class="card" style="width: 18rem;height: 25rem">
                             <img src="./img/P1090960_vga.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h6 class="card-title">UNLB Noticias | 18-06-2023</h6>
+                                <p class="card-text">Se lanzó la primera Red interuniversitaria de Spin Off de Argentina.</p>
                             </div>
                         </div>
                         </a>
@@ -227,44 +227,44 @@
                         <div class="owl-carousel owl-theme ">
                             <a href="#">
                                 <div class="item">
+                                <img style="height: 215px;" src="./img/expo_carreras_2019_1-37-300x200.jpg" alt="">
+                                <h3>21 · JUN</h3>
+                                <p>09:00 Hs. Convocatoria para emprendedores</p>
+                            </div>
+                            </a>
+                            <a href="#">
+                                <div class="item">
                                 <img src="./img/agenda/t_31585.jpg" alt="">
-                                <h3> Zapatillas Adidas Superstar</h3>
-                                <p>Icónicas zapatillas de Adidas con puntera de goma y tres bandas paralelas. Estilo clásico y versátil.</p>
+                                <h3> 26 · JUN</h3>
+                                <p>09:00 Hs. Actividades sobre Ambiente y extensión Universitaria</p>
                             </div>
                             </a>
                             <a href="#">
                                 <div class="item">
                                 <img src="./img/agenda/t_31426.jpg" alt="">
-                                <h3>Zapatillas Nike Air Force 1</h3>
-                                <p>Una zapatilla icónica y versátil de Nike.</p>
+                                <h3>16 · JUL</h3>
+                                <p>00:00 Hs. El Paraninfo festeja sus 20 años con una muestra interactiva</p>
                             </div>
                             </a>
                             <a href="#">
                                 <div class="item">
                                 <img src="./img/agenda/t_31545.jpg" alt="">
-                                <h3>Zapatillas DC</h3>
-                                <p>Zapatillas DC estilo urbano y rendimiento en el skateboard.</p>
+                                <h3>25 · AGO</h3>
+                                <p>20:00 Hs. Proyectá Bio</p>
                             </div>
+                            <a href="#">
+                                <div class="item">
+                                <img src="./img/agenda/t_31672.jpg" alt="">
+                                <h3>09 · SEP</h3>
+                                <p>08:00 Hs. Convocatoria a proyectos Comedia UNLB 2024</p>
+                            </div>
+                            </a>
                             </a>
                             <a href="#">
                                 <div class="item">
                                 <img src="./img/agenda/t_31632.jpg" alt="">
-                                <h3>Zapatillas Nike Original</h3>
-                                <p>Calidad, estilo y rendimiento en un solo calzado.</p>
-                            </div>
-                            </a>
-                            <a href="#">
-                                <div class="item">
-                                <img src="./img/agenda/t_31672.jpg" alt="">
-                                <h3>Zapatillas Adidas New</h3>
-                                <p>Nuevas Zapatillas de Adidas Perfectas para alto rendimiento</p>
-                            </div>
-                            </a>
-                            <a href="#">
-                                <div class="item">
-                                <img style="height: 215px;" src="./img/expo_carreras_2019_1-37-300x200.jpg" alt="">
-                                <h3>Zapatillas Adidas New</h3>
-                                <p>Nuevas Zapatillas de Adidas Perfectas para alto rendimiento</p>
+                                <h3>10 · OCT</h3>
+                                <p>08:00 Hs. Idiomas para la Comunidad: Cursos 2do Cuatrimestre</p>
                             </div>
                             </a>
                         </div>
