Trabajo final listo

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <div class="card" style="width: 18rem; height: 25rem;">
                             <img src="./img/Laguna_Setubal_Bajante_Parana_Alfieri_35_vga.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h6 class="card-title">UNLB Noticias | 21-06-2023</h6>
+                                <h6 class="card-title"><b>UNLB Noticias | 21-06-2023</b></h6>
                                 <p class="card-text">El próximo congreso de bioingeniería se realizará en la ciudad de Santa Fe.</p>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                             <div class="card" style="width: 18rem;height: 25rem">
                             <img src="./img/01_Asamblea_UNL_2022_vga.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h6 class="card-title">UNLB Noticias | 26-06-2023</h6>
+                                <h6 class="card-title"><b>UNLB Noticias | 26-06-2023</b></h6>
                                 <p class="card-text">La Asamblea Universitaria de UNLB aprobó la Memoria y el Informe 2021</p>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                             <div class="card" style="width: 18rem;height: 25rem">
                             <img src="./img/P1090960_vga.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h6 class="card-title">UNLB Noticias | 18-06-2023</h6>
+                                <h6 class="card-title"><b>UNLB Noticias | 18-06-2023</b></h6>
                                 <p class="card-text">Se lanzó la primera Red interuniversitaria de Spin Off de Argentina.</p>
                             </div>
                         </div>
