proyecto final pechada

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <div class="row">
                     <div class="alinear-h3"><h3>PROPUESTA ACADÉMICA</h3></div>
                 </div>
-                <div class="row alinear">
+                <div class="row alinear ajustar">
                     <div class="propuesta">
                         <img src="./img/pre-300x200.jpg" alt="">
                         <div class="glass">
